--- a/src/home/index.css
+++ b/src/home/index.css
@@ -3,39 +3,129 @@
     padding:0px;
     box-sizing: border-box;
 }
+
+.partedecima{
+    display: flex;
+        flex-direction: row;
+        align-items:center ;
+        justify-content:space-between;
+        max-width:95%;
+}
 .logo{
-    width:100px;
-    height:100px;
-    top:17px;
-    left: 48px;
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    left: 24px;
+    top: 8px;
+}
+
+.login{
+   
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 99px;
+    height: 45px;
+    left: 1176px;
+    top: 30px;
+    
+    background: rgba(247, 203, 218, 0.33);
+    border: 1px solid #F8C1D3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 25px;
 
 }
-.login{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: #FFD7D7;
-    border-radius: 1em;
-}
+
 .adm{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    background-color: #FFD7D7;
-    border-radius: 1em;
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 99px;
+    height: 45px;
+    left: 1302px;
+    top: 30px;
+
+    background: rgba(247, 203, 218, 0.33);
+    border: 1px solid #F8C1D3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 25px;
 }
+
+.dress{
+    position: absolute;
+    width: 245px;
+    height: 90px;
+    left: 568px;
+    top: 25px;
+
+    font-family: 'IM FELL Great Primer';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 39px;
+    text-align: center;
+
+    color: #F3A1A1;
+}
+
+.hr{
+    position: absolute;
+    width: 1440px;
+    height: 6px;
+    left: 0px;
+    top: 109px;
+
+    background: #D9D9D9;
+}
+
+.maquina{
+    position: absolute;
+    width: 150px;
+    height: 144.98px;
+    left: 29px;
+    top: 200px;
+}
+
+.tecido{
+    position: absolute;
+    width: 150px;
+    height: 69.18px;
+    left: 138px;
+    top: 512px;
+}
+
 
 .titulo{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    position: absolute;
+    width: 1443px;
+    height: 65px;
+    
+    font-family: 'Kantumruy';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 355px;    
+    text-align: center;
+    color: #000000;
+    
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .paragrafo{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color:#FFD7D7;
+    position: absolute;
+    width: 682px;
+    height: 130px;
+    left: 349px;
+    top: 353px;
+
+    font-family: 'Kantumruy';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 43px;
+    text-align: center;
+
+    color: #000000;
 }
 
 .noiva{
@@ -54,3 +144,40 @@
 
     background: rgba(255, 215, 215, 0.8);
 }
+
+.noiva{
+    position: absolute;
+    width: 400px;
+    height: 330.99px;
+    left: 1040px;
+    top: 333px;
+}
+
+.cadastre{
+    position: absolute;
+    width: 237px;
+    height: 109px;
+    left: 572px;
+    top: 581px;
+
+    font-family: 'Kantumruy';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 58px;
+    text-align: center;
+
+    color: #000000;
+}
+
+.faixarosa{
+    position: absolute;
+    width: 1495px;
+    height: 287px;
+    left: 0px;
+    top: 736px;
+
+    background: rgba(255, 215, 215, 0.8);
+ }
+
+
